# scety

./: .gitignore  CHANGELOG.md  Cargo.toml  Makefile  README.md  SECURITY.md
.cargo/: audit.toml
.github/workflows/: ci.yml  release.yml
src/: main.rs  setting.toml
src/cli/: args.rs
src/cli/commands/: check.rs  check_certs.rs  install.rs  mod.rs  reload.rs  run.rs  status.rs  stop.rs  uninstall.rs
src/config/: get_scety_config.rs  get_services_config.rs  get_servises_config.rs  mod.rs  settings.rs
src/core/: HostRouter.rs  SearchRouter.rs  host_router.rs  kwargs.rs  mod.rs  request.rs  response.rs  search_config.rs  search_router.rs
src/http/: error_pages.rs  generate_http_response.rs  mod.rs  parse_http_request.rs
src/models/: default_scety_config.toml  error_template.html  no_configs.html  simple_service_config.toml
src/models/http_code_table/: default.toml  humor.toml
src/network/: cert_check.rs  fallback_server.rs  global_router.rs  ip_limit.rs  listeners.rs  mod.rs  tls.rs
