[package]
name = "scety"
version = "0.0.2"
edition = "2024"

[dependencies]
tokio = { version = "1", features = ["full", "signal"] }
serde = { version = "1.0", features = ["derive"] }
toml = "1.1"
chrono = "0.4"
walkdir = "2.5.0"
static-toml = "1.3.0"
httparse = "1.10.1"
tracing = "0.1.44"
tracing-subscriber = { version = "0.3", features = ["chrono", "env-filter"] }
clap = { version = "4", features = ["derive"] }
nix = { version = "0.31", features = ["user"] }
tokio-util = "0.7.18"
humantime = "2.3.0"
smallvec = "1.15.2"
tokio-rustls = "0.26"
rustls-pemfile = "2"
tokio-rustls-acme = "0.9"
tokio-stream = { version = "0.1", features = ["net"] }
futures = "0.3"
rustls = { version = "0.23", default-features = false, features = ["ring"] }